@@ -6,9 +6,9 @@ import cn.zhxu.bs.util.StringUtils;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
+import java.lang.reflect.RecordComponent;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 /**
  * 默认元信息解析器
@@ -60,13 +60,16 @@ public class DefaultMetaResolver implements MetaResolver {
 
         public final Field field;
         public final DbMapping.Column column;
+        /** record canonical constructor 中的参数索引，非 record 字段为 -1 */
+        public final int recordIndex;
 
-        public FieldWrapper(Field field, DbMapping.Column column) {
+        public FieldWrapper(Field field, DbMapping.Column column, int recordIndex) {
             if (field != null) {
                 field.setAccessible(true);
             }
             this.field = field;
             this.column = column;
+            this.recordIndex = recordIndex;
         }
     }
 
@@ -75,17 +78,30 @@ public class DefaultMetaResolver implements MetaResolver {
         if (table == null) {
             throw new SearchException("The class [" + beanClass.getName() + "] can not be searched, because it can not be resolved by " + dbMapping.getClass());
         }
-        BeanMeta<T> beanMeta = createBeanMeta(beanClass, table);
+        boolean isRecord = beanClass.isRecord();
+        BeanMeta<T> beanMeta = createBeanMeta(beanClass, table, isRecord);
         List<FieldWrapper> wrappers = new ArrayList<>();
-        table.getFields().forEach(column -> wrappers.add(new FieldWrapper(null, column)));
+        table.getFields().forEach(column -> wrappers.add(new FieldWrapper(null, column, -1)));
+        // 构建 record 组件名 -> 参数索引的映射（仅 record 类需要）
+        Map<String, Integer> recordComponentIndex = new HashMap<>();
+        if (isRecord) {
+            RecordComponent[] components = beanClass.getRecordComponents();
+            for (int i = 0; i < components.length; i++) {
+                recordComponentIndex.put(components[i].getName(), i);
+            }
+        }
         wrappers.addAll(getBeanFields(beanClass).stream()
                 .map(field -> {
                     // 解析实体类字段
                     DbMapping.Column column = dbMapping.column(beanClass, field);
-                    return column != null ? new FieldWrapper(field, column) : null;
+                    if (column == null) {
+                        return null;
+                    }
+                    int index = isRecord ? recordComponentIndex.getOrDefault(field.getName(), -1) : -1;
+                    return new FieldWrapper(field, column, index);
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+                .toList());
         // 不再对 wrappers 进行排序，以保持用户在实体类中的字段声明顺序
 
         Set<String> fieldChecks = new HashSet<>();  // 用于校验属性是否重复
@@ -116,7 +132,8 @@ public class DefaultMetaResolver implements MetaResolver {
                     wrapper.column.isConditional(),
                     wrapper.column.getOnlyOn(),
                     wrapper.column.getDbType(),
-                    wrapper.column.getCluster()
+                    wrapper.column.getCluster(),
+                    wrapper.recordIndex
             );
             beanMeta.addFieldMeta(fieldMeta);
         }
@@ -126,7 +143,7 @@ public class DefaultMetaResolver implements MetaResolver {
         return beanMeta;
     }
 
-    protected <T> BeanMeta<T> createBeanMeta(Class<T> beanClass, DbMapping.Table table) {
+    protected <T> BeanMeta<T> createBeanMeta(Class<T> beanClass, DbMapping.Table table, boolean isRecord) {
         return new BeanMeta<>(beanClass, table.getDataSource(),
                 snippetResolver.resolve(table.getTables()),
                 snippetResolver.resolve(table.getWhere()),
@@ -135,7 +152,7 @@ public class DefaultMetaResolver implements MetaResolver {
                 snippetResolver.resolve(table.getOrderBy()),
                 table.isSortable(), table.isDistinct(),
                 table.getTimeout(), table.getMaxSize(),
-                table.getMaxOffset());
+                table.getMaxOffset(), isRecord);
     }
 
     protected String resolveAlias(DbMapping.Column column, Set<String> checks) {
@@ -153,6 +170,9 @@ public class DefaultMetaResolver implements MetaResolver {
     }
 
     protected List<Field> getBeanFields(Class<?> beanClass) {
+        if (beanClass.isRecord()) {
+            return getRecordFields(beanClass);
+        }
         InheritType iType = dbMapping.inheritType(beanClass);
         List<Field> fieldList = new ArrayList<>();
         Set<String> fieldNames = new HashSet<>();
@@ -172,6 +192,27 @@ public class DefaultMetaResolver implements MetaResolver {
                 break;
             }
             beanClass = beanClass.getSuperclass();
+        }
+        return fieldList;
+    }
+
+    /**
+     * 获取 record 类的字段列表，按 canonical constructor 参数顺序排列。
+     * record 的 RecordComponent 注解会自动传播到对应的私有 final field，
+     * 因此通过 field 也能读到 @DbField/@DbIgnore 注解。
+     */
+    protected List<Field> getRecordFields(Class<?> beanClass) {
+        RecordComponent[] components = beanClass.getRecordComponents();
+        List<Field> fieldList = new ArrayList<>(components.length);
+        for (RecordComponent component : components) {
+            try {
+                Field field = beanClass.getDeclaredField(component.getName());
+                field.setAccessible(true);
+                fieldList.add(field);
+            } catch (NoSuchFieldException e) {
+                // 理论上不会发生
+                throw new SearchException("Record field [" + component.getName() + "] not found on [" + beanClass.getName() + "].", e);
+            }
         }
         return fieldList;
     }
